- docker 이미지 및 컨테이너로 만들어서 구동하는 것 성공공

--- a/nginx_server/default.conf
+++ b/nginx_server/default.conf
@@ -10,6 +10,9 @@ server {
     location / {
         # 모든 요청을 위에서 정의한 'django' upstream 서버로 전달(proxy_pass)합니다.
         proxy_pass http://django;
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
     }
 
     location /static/ {
